--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 	},
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build"
+		"build": "next build",
+		"test:e2e": "playwright test"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.49.1",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.5",
 		"@types/react": "^19.0.4",
