--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"test:e2e": "playwright test"
+		"test:e2e": "playwright test",
+		"test": "pnpm test:unit && pnpm test:e2e",
+		"test:watch": "jest --watchAll"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.49.1",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.1.0",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.5",
 		"@types/react": "^19.0.4",
 		"@types/react-dom": "^19.0.2",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"ts-jest": "^29.2.5",
 		"typescript": "^5.7.3"
 	}
 }
