--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
 		"@types/node": "^22.10.5",
 		"@types/react": "^19.0.4",
 		"@types/react-dom": "^19.0.2",
+		"autoprefixer": "^10.4.20",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.2.5",
 		"typescript": "^5.7.3"
 	}
