--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"postcss": "^8.4.49",
+		"prettier": "^3.4.2",
 		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.2.5",
 		"typescript": "^5.7.3"
