--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"prettier": "^3.4.2",
 		"tailwindcss": "^3.4.17",
 		"ts-jest": "^29.2.5",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.7.3"
 	}
 }
