--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"cra-template-typescript": "1.2.0",
-		"next": "^15.1.4",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
+		"cra-template-typescript": "1.3.0",
+		"next": "^16.0.8",
+		"react": "^19.2.1",
+		"react-dom": "^19.2.1",
 		"react-scripts": "5.0.1"
 	},
 	"scripts": {
@@ -18,27 +18,28 @@
 		"test:watch": "jest --watchAll"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.49.1",
-		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.1.0",
-		"@testing-library/user-event": "^14.5.2",
-		"@types/jest": "^29.5.14",
-		"@types/node": "^22.10.5",
-		"@types/react": "^19.0.4",
-		"@types/react-dom": "^19.0.2",
-		"@typescript-eslint/eslint-plugin": "^8.19.1",
-		"@typescript-eslint/parser": "^8.19.1",
-		"autoprefixer": "^10.4.20",
-		"eslint": "^9.17.0",
-		"eslint-plugin-react-hooks": "^5.1.0",
-		"eslint-plugin-react-refresh": "^0.4.16",
-		"jest": "^29.7.0",
-		"jest-environment-jsdom": "^29.7.0",
-		"postcss": "^8.4.49",
-		"prettier": "^3.4.2",
-		"tailwindcss": "^3.4.17",
-		"ts-jest": "^29.2.5",
+		"@playwright/test": "^1.57.0",
+		"@tailwindcss/postcss": "^4.1.17",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/jest": "^30.0.0",
+		"@types/node": "^24.10.2",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"@typescript-eslint/eslint-plugin": "^8.49.0",
+		"@typescript-eslint/parser": "^8.49.0",
+		"autoprefixer": "^10.4.22",
+		"eslint": "^9.39.1",
+		"eslint-plugin-react-hooks": "^7.0.1",
+		"eslint-plugin-react-refresh": "^0.4.24",
+		"jest": "^30.2.0",
+		"jest-environment-jsdom": "^30.2.0",
+		"postcss": "^8.5.6",
+		"prettier": "^3.7.4",
+		"tailwindcss": "^4.1.17",
+		"ts-jest": "^29.4.6",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.7.3"
+		"typescript": "^5.9.3"
 	}
 }
